# greyrock

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  start.sh
greyrock/: cli.py  config.py
greyrock/agents/: base.py
greyrock/orchestrator/: director.py
memory/agents/: shared_financial_profile.example.md
prompts/: accountant.md  broker.md  financial_planner.md  investment_researcher.md  managing_director.md  portfolio_researcher.md  tax_advisor.md
